# mrp

./: .gitignore  README.md  genomics_bins.csv  genomics_summary.txt  pyproject.toml
.mrp/ops_pkg/: gen_622fa9adb110cbf539a4493c4cbaa7600a8e04056c04b43e8e249dfedb8bd621.py  gen_d9d371707b52ca7f6f15c2b957cb229569ee41d051e7ba4ef9a3631ff8559a6f.py
docs/: Genomics Demo Bash Script.sh  architecture.md  daytona_PRD.md  mrp_PRD.md
examples/jobs/: cloud_genomics.yaml  cloud_toy.yaml  generated.yaml  toy.yaml
notebooks/: Genomics_MRP.ipynb
src/examples/: genomics.py  toy.py
src/mrp/: __init__.py  compiler.py
src/mrp/artifacts/: store.py
src/mrp/cli/: main.py
src/mrp/dsl/: schema.py
src/mrp/ir/: model.py
src/mrp/runtime/: local.py
src/mrp/runtime/backends/: cloud_sandbox.py
src/mrp/sdk/: base.py
tests/: test_end_to_end.py
